# I-ching

./: .eslintrc.js  .gitignore  .lintstagedrc.js  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Procfile  README.md  build.ts  daemon.json  docker-compose.yml  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt  settings.json  setup-backend.sh  setup-frontend.sh  setup-uv.sh  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  main.yaml
.github/workflows/: ci.yml  docker-publish.yml
.husky/: pre-commit
backend/: .ruff.toml  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  hexagram.py  interpreter.py
backend/core/: __init__.py  coins.py  yarrow.py
backend/models/: __init__.py  schemas.py
backend/tests/: test_probability.py
core/: yarrow.py
data/: hexagrams.json
divination/: .env  README.md  __init__.py  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  yarrow.py
divination/core/: __init__.py  coins.py  yarrow.py
divination/data/: hexagrams.json  schema.json
divination/models/: __init__.py  models.py  schemas.py
divination/tests/: test_probability.py
frontend/: .env.example  .eslintrc.cjs  .eslintrc.json  package.json  pnpm-lock.yaml  serve.sh  vitest.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx  types.ts
frontend/src/api/: index.ts
frontend/src/components/: CastingForm.tsx  ChatInterface.tsx  DivinationMethodSelector.tsx  HexagramDisplay.tsx  HexagramLine.tsx  Layout.tsx  ReadingDisplay.tsx  ReadingForm.tsx  ReadingsHistory.tsx  YinYangSpinner.tsx
frontend/src/hooks/: useAiInterpreter.ts  useCastHexagram.ts  useHexagram.ts  useMethodSelection.ts  useReading.ts
frontend/src/pages/: DivinationPage.tsx  HexagramReadingPage.tsx
frontend/src/providers/: AppProvider.tsx
frontend/src/services/: api.ts  hexagramService.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: trigrams.ts
iching/: __init__.py  core.py  iching.py  interpreter.py  main.py
iching/data/: readings.json
iching/static/: index.html  script.js  style.css  styles.css
iching/stubs/fastapi/: __init__.pyi
iching/stubs/pydantic/: __init__.pyi
iching/stubs/uvicorn/: __init__.pyi
iching_api/: .ruff.toml  __init__.py  main.py  pyproject.toml
iching_api/app/: __init__.py  main.py
iching_api/app/api/: endpoints.py
iching_api/app/core/: client.py  models.py
iching_api/app/data/: hexagrams.json
iching_api/core/: __init__.py  client.py  config.py
