[tool.poetry]
name = "iching_api"
version = "0.1.0"
description = "I Ching API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0"
google-generativeai = "^0.3.2"
pydantic = "^2.5.3"
tenacity = "^8.2.3"
python-dotenv = "^1.0.1"
fastapi-cors = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
pre-commit = "^3.6.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
fastapi-cors = "^0.0.6"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app"
]
testpaths = [
    "app/tests"
]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"